# CoverGAN

./: .gitignore  Dockerfile  README.md  __init__.py  captioner_train.py  cloudbuild.yml  config.yml  covergan_training_command.sh  docker_run_covergan_service.sh  fonts_cfg.py  gen.py  json_output_reader.py  requirements.txt  run_eval.py  server.py  server_json.py  service.py  service_utils.py  supervisord.conf  test_server.sh
captions/: dataset.py
captions/models/: captioner.py
colorer/: test_model.py
covergan/: README.md  __init__.py  colorer_train.py  covergan_train.py  covergan_training_command.sh  docker_build.sh  docker_run_with_it.sh  eval.py  requirements.txt  run_eval.py  service.py  service_utils.py
covergan/colorer/: train.py  (+7 more)
covergan_backend/: Dockerfile  README.md  docker_build_covergan_service.sh  docker_run_covergan_service.sh  entry.sh  gen.py  requirements.txt  server.py
covergan_frontend/: .dockerignore  Dockerfile  README.md  docker_build_covergan_front.sh  docker_run_covergan_front.sh  package-lock.json  package.json  repair_all_bash_scripts_to_linux.sh
html/: color-extractor.html  index.html  rasterize.html
outer/: SVGContainer.py  colors_tools.py  metadata_extractor.py  represent.py  test_blur.py
protosvg/: Cargo.toml  README.md  build.rs
protosvg/client/: .gitignore  client.py  generate_pb.sh  requirements.txt
protosvg/proto/: protosvg.proto  service.proto
protosvg/src/: main.rs  protos.rs  renderer.rs  svg_writer.rs
tests/: requests_test.py
utils/: deterministic_text_fitter.py  image_clustering.py  noise.py  plotting.py
(+3581 files in other folders)
