[package]
name = "protosvg"
version = "0.1.0"
authors = ["Anonymous authors"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.4"


[dependencies]
htmlescape = "0.3.1"
prost = "0.7"
resvg = "0.15.0"
tiny-skia = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
tonic = "0.4"
usvg = "0.15.0"
xmlwriter = "0.1.0"
